# common_substrings_rust

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib  lib.rs  main.rs
tests/: tests.rs
